tg-bot/bot.err
C:\Users\User\Documents\spor3s-app\tg-bot\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
bot.ts(76,12): error TS18046: 'data' is of type 'unknown'.
bot.ts(99,23): error TS18046: 'errorData' is of type 'unknown'.
bot.ts(155,23): error TS18046: 'errorData' is of type 'unknown'.
bot.ts(199,41): error TS18046: 'error' is of type 'unknown'.
bot.ts(256,48): error TS18046: 'error' is of type 'unknown'.
bot.ts(369,44): error TS18046: 'error' is of type 'unknown'.
bot.ts(416,41): error TS18046: 'error' is of type 'unknown'.
bot.ts(438,48): error TS18046: 'error' is of type 'unknown'.
bot.ts(600,25): error TS18046: 'orderResult' is of type 'unknown'.
bot.ts(605,21): error TS18046: 'orderResult' is of type 'unknown'.
bot.ts(606,13): error TS18046: 'orderResult' is of type 'unknown'.
bot.ts(613,44): error TS18046: 'error' is of type 'unknown'.

    at createTSError (C:\Users\User\Documents\spor3s-app\tg-bot\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\User\Documents\spor3s-app\tg-bot\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\User\Documents\spor3s-app\tg-bot\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\User\Documents\spor3s-app\tg-bot\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\User\Documents\spor3s-app\tg-bot\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1706:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\User\Documents\spor3s-app\tg-bot\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [
    18046, 18046, 18046,
    18046, 18046, 18046,
    18046, 18046, 18046,
    18046, 18046, 18046
  ]
}
